k8s-security-framework/policies/metadata/KSP-META-002/tests/exception-policy-for-specific-resources.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: require-owner-label-exception
  namespace: policy-test
spec:
  policyRefs:
  - name: require-owner-label
    kind: ValidatingPolicy
  matchConditions:
  - name: match-exempt-resource
    expression: object.metadata.name in ['ksp-meta-002-exception', 'ksp-meta-002-exception-secondary',
      'ksp-meta-002-exception-tertiary'] && object.metadata.namespace == 'policy-test'
